! fix the main display template post spacing
Conflicts:
	themes/default/css/_light/index_light.css

--- a/themes/default/css/_light/index_light.css
+++ b/themes/default/css/_light/index_light.css
@@ -1399,7 +1399,7 @@ div.bbc_footnotes .meaction {
 #quickreplybox, #forumposts, #searchform, #recentposts, #pmFolder {
 	background: #E5E5E5;
 	box-shadow: 1px 2px 4px #EEEEEE;
-	border-radius: 2px 2px 0 0;
+	border-radius: 4px 4px 0 0;
 }
 .forumposts {
 	margin-top: 2px;
