--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -2567,7 +2567,7 @@ img.new_posts {
 }
 
 /* Separator of posts. More useful in the print stylesheet. */
-.forumposts .post_separator {
+.post_separator {
 	display: none;
 }
 
